3.0.3
- Plugin java version changed to 1.8
- Multi versioned 1.8-1.21.4
- /job war list <job> command added
- /job invite bug fixed